-- 0016_wawi_schema.sql
-- Zweck: das operative Warenwirtschaftsschema wawi — der Kern, in den Kasse
--        und Shop schreiben.
--
--        Bis hierher lasen beide Anwendungen ihren Artikelstamm aus
--        dim_product, also aus dem Auswertungsmodell. Damit lief die
--        Fallstudie in die Richtung, die Kapitel 2 der Dokumentation als
--        falsch erklaert: Das operative System liest nicht aus dem Warehouse,
--        das Warehouse wird aus dem operativen System beladen. Die Kette
--        Kasse -> operatives System -> ETL -> Galaxy-Schema -> Dashboard war
--        deshalb nur behauptet. Ab hier ist sie gebaut:
--
--          0016  Schema wawi, 15 Tabellen in 3NF, Stammdaten     (diese Datei)
--          0017  Bestand: die historischen Bestellungen           (einmalig)
--          0018  Sichten fuer Shop und Kasse, Schreibfunktion, Rechte
--          0019  ETL wawi -> burgermetrics, Probe, Aufraeumen
--
--        Das Modell folgt dataset/wawi_mini.sql (deutsche Namen, 3NF), hier
--        um die Spalten erweitert, die Shop und Kasse tatsaechlich zeigen
--        (Adresse, Koordinaten, Allergene, ...). Was das Mini weglaesst —
--        Einkauf, Lager, Schichtplan — fehlt auch hier; siehe
--        docs/08-entscheidungen.md#e3.
--
-- Objekte: Schema wawi; filialtyp, filiale, artikelkategorie,
--          artikelunterkategorie, artikel, preishistorie, loyalty_stufe,
--          kunde, mitarbeiter, zahlungsart, promotionstyp, promotion,
--          kundenbestellung, bestellposition, rechnung.
-- Voraussetzung: 0001 und 0002 sind gelaufen und die CSV-Dateien geladen —
--          die Stammdaten werden aus den Dimensionen uebernommen.
-- Ruecknahme: DROP SCHEMA wawi CASCADE;
-- Idempotent: ja. Stammdaten werden per ON CONFLICT nachgezogen.

CREATE SCHEMA IF NOT EXISTS wawi;
SET search_path TO wawi, burgermetrics;

-- ---------------------------------------------------------------------------
-- Stammdaten: Filialen
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS filialtyp (
  filialtyp_id  integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name          text NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS filiale (
  filiale_id          bigint PRIMARY KEY,
  name                text NOT NULL,
  adresse             text,
  stadtteil           text,
  ort                 text,
  plz                 text,
  breite              double precision,
  laenge              double precision,
  flaeche_qm          integer,
  sitzplaetze_innen   integer,
  sitzplaetze_aussen  integer,
  hat_drive_through   boolean,
  hat_spielplatz      boolean,
  parkplaetze         integer,
  eroeffnet_am        date,
  monatsmiete         numeric(10,2),
  filialtyp_id        integer REFERENCES filialtyp(filialtyp_id)
);

-- ---------------------------------------------------------------------------
-- Stammdaten: Artikel. Kategorie und Unterkategorie sind eigene Tabellen —
-- genau die Normalisierung, die das Auswertungsmodell in dim_product wieder
-- zuruecknimmt.
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS artikelkategorie (
  kategorie_id  integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name          text NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS artikelunterkategorie (
  unterkategorie_id  integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name               text NOT NULL,
  kategorie_id       integer NOT NULL REFERENCES artikelkategorie(kategorie_id),
  UNIQUE (name, kategorie_id)
);

CREATE TABLE IF NOT EXISTS artikel (
  artikel_id         bigint PRIMARY KEY,
  name               text NOT NULL,
  unterkategorie_id  integer NOT NULL REFERENCES artikelunterkategorie(unterkategorie_id),
  vegetarisch        boolean,
  vegan              boolean,
  kalorien           integer,
  allergene          text,
  gelistet_seit      date,
  listenpreis        numeric(6,2) NOT NULL,     -- der heute gueltige Verkaufspreis
  einstandspreis     numeric(6,2)
);

-- Preishistorie: das operative Modell kennt die Geschichte eines Preises,
-- das analytische nur zwei Staende (base_price_2017, unit_price).
CREATE TABLE IF NOT EXISTS preishistorie (
  preis_id       bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  artikel_id     bigint NOT NULL REFERENCES artikel(artikel_id),
  gueltig_ab     date NOT NULL,
  gueltig_bis    date,                          -- NULL = gilt heute
  verkaufspreis  numeric(6,2) NOT NULL,
  UNIQUE (artikel_id, gueltig_ab)
);

-- ---------------------------------------------------------------------------
-- Stammdaten: Kunden, Personal, Zahlung, Aktionen
-- ---------------------------------------------------------------------------
CREATE TABLE IF NOT EXISTS loyalty_stufe (
  stufe_id  integer PRIMARY KEY,
  name      text NOT NULL UNIQUE
);

CREATE TABLE IF NOT EXISTS kunde (
  kunde_id            bigint PRIMARY KEY,
  altersgruppe        text,
  geschlecht          text,
  heimat_stadtteil    text,
  erstbesuch_jahr     integer,
  hat_app             boolean,
  app_registriert_am  date,
  loyalty_stufe_id    integer REFERENCES loyalty_stufe(stufe_id)
);

CREATE TABLE IF NOT EXISTS mitarbeiter (
  mitarbeiter_id  bigint PRIMARY KEY,
  filiale_id      bigint REFERENCES filiale(filiale_id),
  rolle           text,
  eingestellt_am  date,
  stundenlohn     numeric(6,2),
  vollzeit        boolean
);

CREATE TABLE IF NOT EXISTS zahlungsart (
  zahlungsart_id  bigint PRIMARY KEY,
  bezeichnung     text NOT NULL,
  anbieter        text,
  gebuehr_pct     numeric(5,2)
);

CREATE TABLE IF NOT EXISTS promotionstyp (
  promotionstyp_id  integer GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name              text NOT NULL UNIQUE
);

-- Keine Zeile fuer 'keine Aktion': Operativ ist das NULL am Beleg. Die Zeile
-- "No Promotion" mit der Kennung 0 entsteht erst im Uebergang (0019).
CREATE TABLE IF NOT EXISTS promotion (
  promotion_id      bigint PRIMARY KEY,
  name              text NOT NULL,
  promotionstyp_id  integer REFERENCES promotionstyp(promotionstyp_id),
  rabatt_pct        integer
);

-- ---------------------------------------------------------------------------
-- Bewegungsdaten: Bestellung, Position, Rechnung
-- ---------------------------------------------------------------------------
-- quelle unterscheidet den kuratierten Bestand ('bestand') von dem, was
-- Studierende an Kasse ('kasse') und im Shop ('shop') erzeugen. Damit lassen
-- sich Uebungsbestellungen gezielt auswerten und wieder entfernen (0019),
-- ohne den Bestand anzufassen. sitzung ist eine vom Browser vergebene
-- Kennung, damit eine Uebungsgruppe ihre eigenen Belege wiederfindet.
CREATE TABLE IF NOT EXISTS kundenbestellung (
  bestellung_id    bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  bestelldatum     date NOT NULL,
  bestellzeit      time NOT NULL,
  filiale_id       bigint NOT NULL REFERENCES filiale(filiale_id),
  kunde_id         bigint REFERENCES kunde(kunde_id),
  mitarbeiter_id   bigint REFERENCES mitarbeiter(mitarbeiter_id),
  zahlungsart_id   bigint NOT NULL REFERENCES zahlungsart(zahlungsart_id),
  promotion_id     bigint REFERENCES promotion(promotion_id),
  bestellkanal     text NOT NULL,
  artikel_anzahl   integer NOT NULL,
  brutto_gesamt    numeric(10,2) NOT NULL,      -- VOR Rabatt
  rabatt_betrag    numeric(10,2) NOT NULL DEFAULT 0,
  netto_gesamt     numeric(10,2) NOT NULL,      -- NACH Rabatt (= Zahlbetrag)
  bestelldauer_min integer,
  zufriedenheit    numeric(3,2),
  quelle           text NOT NULL DEFAULT 'bestand'
                   CHECK (quelle IN ('bestand', 'kasse', 'shop')),
  sitzung          text,
  erfasst_am       timestamptz NOT NULL DEFAULT now()
);

CREATE TABLE IF NOT EXISTS bestellposition (
  position_id     bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  bestellung_id   bigint NOT NULL REFERENCES kundenbestellung(bestellung_id) ON DELETE CASCADE,
  artikel_id      bigint NOT NULL REFERENCES artikel(artikel_id),
  menge           integer NOT NULL CHECK (menge > 0),
  einzelpreis     numeric(6,2) NOT NULL,        -- Preis zum Verkaufszeitpunkt
  positionsbetrag numeric(10,2) NOT NULL
);

-- Steuerliche Sicht: zahlbetrag = netto_gesamt der Bestellung. Der Satz
-- steht am Beleg, weil er sich seit 2017 mehrfach geaendert hat und die
-- Kasse ihn je Verzehrart anwendet (siehe MWST in web/pos.html).
CREATE TABLE IF NOT EXISTS rechnung (
  rechnung_id     bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  bestellung_id   bigint NOT NULL UNIQUE REFERENCES kundenbestellung(bestellung_id) ON DELETE CASCADE,
  rechnungsdatum  date NOT NULL,
  zahlbetrag      numeric(10,2) NOT NULL,
  mwst_satz       numeric(4,3) NOT NULL,
  mwst_betrag     numeric(10,2) NOT NULL,
  zahlungsart_id  bigint NOT NULL REFERENCES zahlungsart(zahlungsart_id)
);

CREATE INDEX IF NOT EXISTS ix_wawi_bestellung_datum   ON kundenbestellung(bestelldatum);
CREATE INDEX IF NOT EXISTS ix_wawi_bestellung_quelle  ON kundenbestellung(quelle, erfasst_am);
CREATE INDEX IF NOT EXISTS ix_wawi_bestellung_sitzung ON kundenbestellung(sitzung, erfasst_am);
CREATE INDEX IF NOT EXISTS ix_wawi_position_bestellung ON bestellposition(bestellung_id);
CREATE INDEX IF NOT EXISTS ix_wawi_position_artikel    ON bestellposition(artikel_id);

-- ---------------------------------------------------------------------------
-- Stammdaten aus den Dimensionen uebernehmen.
--
-- Die CSV-Dateien bleiben die Quelle der Wahrheit (db/README.md). Deshalb
-- entstehen die Stammdaten hier aus burgermetrics.dim_* und nicht umgekehrt —
-- ein einmaliger Weg rueckwaerts, damit beide Modelle denselben Bestand
-- beschreiben. Der laufende Weg geht danach nur noch vorwaerts (0019).
-- ---------------------------------------------------------------------------
INSERT INTO filialtyp (name)
SELECT DISTINCT branch_type FROM burgermetrics.dim_branch WHERE branch_type IS NOT NULL
ON CONFLICT (name) DO NOTHING;

INSERT INTO filiale (filiale_id, name, adresse, stadtteil, ort, plz, breite, laenge,
                     flaeche_qm, sitzplaetze_innen, sitzplaetze_aussen, hat_drive_through,
                     hat_spielplatz, parkplaetze, eroeffnet_am, monatsmiete, filialtyp_id)
SELECT b.branch_id, b.branch_name, b.address, b.district, b.city, b.postal_code,
       b.latitude, b.longitude, b.size_sqm, b.seats_indoor, b.seats_outdoor,
       b.has_drive_through, b.has_playground, b.parking_spots, b.opening_date,
       b.monthly_rent_eur, t.filialtyp_id
FROM   burgermetrics.dim_branch b
LEFT JOIN filialtyp t ON t.name = b.branch_type
ON CONFLICT (filiale_id) DO UPDATE SET
  name = EXCLUDED.name, adresse = EXCLUDED.adresse, stadtteil = EXCLUDED.stadtteil,
  ort = EXCLUDED.ort, plz = EXCLUDED.plz, breite = EXCLUDED.breite, laenge = EXCLUDED.laenge,
  flaeche_qm = EXCLUDED.flaeche_qm, sitzplaetze_innen = EXCLUDED.sitzplaetze_innen,
  sitzplaetze_aussen = EXCLUDED.sitzplaetze_aussen, hat_drive_through = EXCLUDED.hat_drive_through,
  hat_spielplatz = EXCLUDED.hat_spielplatz, parkplaetze = EXCLUDED.parkplaetze,
  eroeffnet_am = EXCLUDED.eroeffnet_am, monatsmiete = EXCLUDED.monatsmiete,
  filialtyp_id = EXCLUDED.filialtyp_id;

INSERT INTO artikelkategorie (name)
SELECT DISTINCT category FROM burgermetrics.dim_product WHERE category IS NOT NULL
ON CONFLICT (name) DO NOTHING;

INSERT INTO artikelunterkategorie (name, kategorie_id)
SELECT DISTINCT p.subcategory, k.kategorie_id
FROM   burgermetrics.dim_product p
JOIN   artikelkategorie k ON k.name = p.category
WHERE  p.subcategory IS NOT NULL
ON CONFLICT (name, kategorie_id) DO NOTHING;

INSERT INTO artikel (artikel_id, name, unterkategorie_id, vegetarisch, vegan, kalorien,
                     allergene, gelistet_seit, listenpreis, einstandspreis)
SELECT p.product_id, p.product_name, u.unterkategorie_id, p.is_vegetarian, p.is_vegan,
       p.calories, p.allergens, p.introduced, p.unit_price, p.cost_price
FROM   burgermetrics.dim_product p
JOIN   artikelkategorie      k ON k.name = p.category
JOIN   artikelunterkategorie u ON u.name = p.subcategory AND u.kategorie_id = k.kategorie_id
ON CONFLICT (artikel_id) DO UPDATE SET
  name = EXCLUDED.name, unterkategorie_id = EXCLUDED.unterkategorie_id,
  vegetarisch = EXCLUDED.vegetarisch, vegan = EXCLUDED.vegan, kalorien = EXCLUDED.kalorien,
  allergene = EXCLUDED.allergene, gelistet_seit = EXCLUDED.gelistet_seit,
  listenpreis = EXCLUDED.listenpreis, einstandspreis = EXCLUDED.einstandspreis;

-- Zwei Preisstaende je Artikel: der von 2017 bis Ende 2025, der heutige ab
-- 2026 — dieselbe Vereinfachung wie in wawi_mini.sql (gueltig_ab 2026-01-01).
-- Ist nur ein Preis bekannt oder sind beide gleich, gibt es eine Zeile.
INSERT INTO preishistorie (artikel_id, gueltig_ab, gueltig_bis, verkaufspreis)
SELECT p.product_id, DATE '2017-01-01', DATE '2025-12-31', p.base_price_2017
FROM   burgermetrics.dim_product p
WHERE  p.base_price_2017 IS NOT NULL AND p.base_price_2017 <> p.unit_price
ON CONFLICT (artikel_id, gueltig_ab) DO NOTHING;

INSERT INTO preishistorie (artikel_id, gueltig_ab, gueltig_bis, verkaufspreis)
SELECT p.product_id,
       CASE WHEN p.base_price_2017 IS NOT NULL AND p.base_price_2017 <> p.unit_price
            THEN DATE '2026-01-01' ELSE DATE '2017-01-01' END,
       NULL, p.unit_price
FROM   burgermetrics.dim_product p
WHERE  p.unit_price IS NOT NULL
ON CONFLICT (artikel_id, gueltig_ab) DO NOTHING;

-- Loyalty: feste Kennungen, damit 'None' die 1 bleibt wie im Mini.
INSERT INTO loyalty_stufe (stufe_id, name) VALUES
  (1, 'None'), (2, 'Bronze'), (3, 'Silver'), (4, 'Gold')
ON CONFLICT (stufe_id) DO NOTHING;
-- Falls der Bestand weitere Stufen kennt, folgen sie mit den naechsten Nummern.
INSERT INTO loyalty_stufe (stufe_id, name)
SELECT (SELECT max(stufe_id) FROM loyalty_stufe) + row_number() OVER (ORDER BY loyalty_tier), loyalty_tier
FROM  (SELECT DISTINCT loyalty_tier FROM burgermetrics.dim_customer
       WHERE loyalty_tier IS NOT NULL
         AND loyalty_tier NOT IN (SELECT name FROM loyalty_stufe)) neu
ON CONFLICT (name) DO NOTHING;

INSERT INTO kunde (kunde_id, altersgruppe, geschlecht, heimat_stadtteil, erstbesuch_jahr,
                   hat_app, app_registriert_am, loyalty_stufe_id)
SELECT c.customer_id, c.age_group, c.gender, c.home_district, c.first_visit_year,
       c.has_app, c.app_registered_date, l.stufe_id
FROM   burgermetrics.dim_customer c
LEFT JOIN loyalty_stufe l ON l.name = c.loyalty_tier
ON CONFLICT (kunde_id) DO UPDATE SET
  altersgruppe = EXCLUDED.altersgruppe, geschlecht = EXCLUDED.geschlecht,
  heimat_stadtteil = EXCLUDED.heimat_stadtteil, erstbesuch_jahr = EXCLUDED.erstbesuch_jahr,
  hat_app = EXCLUDED.hat_app, app_registriert_am = EXCLUDED.app_registriert_am,
  loyalty_stufe_id = EXCLUDED.loyalty_stufe_id;

INSERT INTO mitarbeiter (mitarbeiter_id, filiale_id, rolle, eingestellt_am, stundenlohn, vollzeit)
SELECT e.employee_id, e.branch_id, e.role, e.hire_date, e.hourly_wage, e.is_fulltime
FROM   burgermetrics.dim_employee e
ON CONFLICT (mitarbeiter_id) DO UPDATE SET
  filiale_id = EXCLUDED.filiale_id, rolle = EXCLUDED.rolle,
  eingestellt_am = EXCLUDED.eingestellt_am, stundenlohn = EXCLUDED.stundenlohn,
  vollzeit = EXCLUDED.vollzeit;

INSERT INTO zahlungsart (zahlungsart_id, bezeichnung, anbieter, gebuehr_pct)
SELECT payment_id, payment_type, payment_provider, transaction_fee_pct
FROM   burgermetrics.dim_payment_method
ON CONFLICT (zahlungsart_id) DO UPDATE SET
  bezeichnung = EXCLUDED.bezeichnung, anbieter = EXCLUDED.anbieter,
  gebuehr_pct = EXCLUDED.gebuehr_pct;

INSERT INTO promotionstyp (name)
SELECT DISTINCT promo_type FROM burgermetrics.dim_promotion
WHERE  promo_id <> 0 AND promo_type IS NOT NULL
ON CONFLICT (name) DO NOTHING;

INSERT INTO promotion (promotion_id, name, promotionstyp_id, rabatt_pct)
SELECT p.promo_id, p.promo_name, t.promotionstyp_id, p.discount_pct
FROM   burgermetrics.dim_promotion p
LEFT JOIN promotionstyp t ON t.name = p.promo_type
WHERE  p.promo_id <> 0
ON CONFLICT (promotion_id) DO UPDATE SET
  name = EXCLUDED.name, promotionstyp_id = EXCLUDED.promotionstyp_id,
  rabatt_pct = EXCLUDED.rabatt_pct;

COMMENT ON SCHEMA wawi IS
  'Operatives Warenwirtschaftsmodell (3NF). Kasse und Shop lesen und schreiben '
  'hier; das Schema burgermetrics wird daraus beladen (0019).';
COMMENT ON COLUMN kundenbestellung.quelle IS
  'bestand = kuratierter Datenbestand aus den CSV-Dateien; kasse/shop = an den '
  'Oberflaechen erzeugte Uebungsbestellungen.';
