%%{init: {"er": {"nodeSpacing": 40, "rankSpacing": 56, "minEntityHeight": 42, "minEntityWidth": 90, "entityPadding": 12, "diagramPadding": 6}}}%%
erDiagram
    SITZUNG   ||--o{ WARENKORBPOSITION : "hält"
    ARTIKEL   ||--o{ WARENKORBPOSITION : "liegt drin"
    SITZUNG   }o--o| KUNDE : "optional angemeldet"
    SITZUNG {
        string session_id PK
        timestamp beginn
        string device_type
    }
    WARENKORBPOSITION {
        int    artikel_id FK
        int    menge
    }
    ARTIKEL {
        int    artikel_id PK
        string name
        money  preis
    }
